--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="banner-container">
+            <div class="banner-first">
+                <h3>
+                    Happy New Year
+                </h3>
+                <h1>
+                    Celebration Of A New Beginning
+                </h1>
+            </div>
+
+        </div>
+    </header>
+
+    <main>
+        
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
